<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_calculator"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_general"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculationTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/resultTV"
        android:layout_marginStart="@dimen/txt_margin"
        android:layout_marginTop="@dimen/txt_margin"
        android:layout_marginEnd="@dimen/txt_margin"
        android:layout_marginBottom="@dimen/txt_margin"
        android:textAlignment="textEnd"
        android:textColor="@color/btn_general"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_margin"
        android:layout_marginEnd="@dimen/txt_margin"
        android:layout_above="@id/button_layout"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        android:textColor="@color/btn_general" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:background="@color/background_linear"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/horizontal_layout_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_currency_converter"
                android:layout_width="57dp"
                android:layout_height="40dp"
                android:layout_marginEnd="270dp"
                android:backgroundTint="@color/transparent"
                android:text="CurrencyConverter"
                app:icon="@drawable/ic_currency_converter"
                app:iconSize="30dp"
                app:iconTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_delete"
                android:layout_width="57dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/transparent"
                android:text="D"
                app:icon="@drawable/ic_delete_character"
                app:iconSize="30dp"
                app:iconTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/horizontal_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/C"
                android:backgroundTint="@color/btn_orange">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_parenthesis"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/open_parenthesis"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_parenthesis"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/close_parenthesis"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/division"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/seven"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/eight"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/nine"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiplication"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/multiplication"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/four"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/five"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/six"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_subtraction"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                android:backgroundTint="@color/btn_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/subtraction"
                android:textColor="@color/txt_general"
                android:textSize="@dimen/txt_size"
                app:cornerRadius="@dimen/corner_radius">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/one"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/two"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/three"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_addition"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/addition"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal_layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/zero"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_decimal_point"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/decimal_point"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                android:layout_width="186dp"
                android:layout_height="@dimen/layout_height"
                android:layout_margin="@dimen/layout_margin"
                app:cornerRadius="@dimen/corner_radius"
                android:textSize="@dimen/txt_size"
                android:textColor="@color/txt_general"
                android:fontFamily="@font/noto_serif_display_regular"
                android:text="@string/equals"
                android:backgroundTint="@color/btn_general">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>